--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Dicas de Estudo</title>
     <meta name="description" content="Dicas e materiais de estudo para quem deseja dar os primeiros passos no mundo da programação">
     <link  rel = "icon" href="img/icon2.jpg">
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     
