Semântica e Heading TAGs

--- a/index.html
+++ b/index.html
@@ -10,6 +10,37 @@
     
 </head>
 <body>
-    
+    <!-- Cabeçalho -->
+    <header>
+
+    </header>
+    <!-- Destaque -->
+    <main>
+      <h1> Primeiros Passos para a programação</h1>
+      <h2> Cursos Gratuitos. Pdfs. Apostilas</h2>
+    </main>
+    <!-- Sobre --> 
+    <section>
+        <h2>Começar a Estudar</h2>
+    </section>
+    <!-- One Page -->
+    <section>
+        <h2>Por onde Começar?</h2>
+    </section>
+    <!-- Wireframe -->
+    <section>
+        <h2> Dicas e Materiais </h2>
+    </section>
+    <!-- Conteúdo -->
+    <section>
+        <h2> Cursos Gratuitos</h2>
+        <h3>Algoritmo</h2>
+        <h3>HTML5 E CSS3</h3>
+        <h3>JavaScript</h3>
+
+    </section>
+    <footer>
+           <!-- Rodapé -->
+    </footer>
 </body>
 </html>
