--- a/index.html
+++ b/index.html
@@ -1,46 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Dicas de Estudo</title>
-    <meta name="description" content="Dicas e materiais de estudo para quem deseja dar os primeiros passos no mundo da programação">
-    <link  rel = "icon" href="img/icon2.jpg">
+    <meta name="description"
+        content="Dicas e materiais de estudo para quem deseja dar os primeiros passos no mundo da programação">
+    <link rel="icon" href="img/icon2.jpg">
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
+
 <body>
     <!-- Cabeçalho -->
     <header>
-
+        <div class="Container"></div>
     </header>
     <!-- Destaque -->
     <main>
-      <h1> Primeiros Passos para a programação</h1>
-      <h2> Cursos Gratuitos. Pdfs. Apostilas</h2>
+        <div class="Container">
+            <h1> Primeiros Passos para a programação</h1>
+            <h2> Cursos Gratuitos. Pdfs. Apostilas</h2>
+        </div>
+
     </main>
-    <!-- Sobre --> 
+    <!-- Sobre -->
     <section>
-        <h2>Começar a Estudar</h2>
+        <div class="Container">
+            <h2>Começar a Estudar</h2>
+        </div>
     </section>
     <!-- One Page -->
     <section>
-        <h2>Por onde Começar?</h2>
+        <div class="Container">
+            <h2>Por onde Começar?</h2>
+        </div>
     </section>
     <!-- Wireframe -->
     <section>
-        <h2> Dicas e Materiais </h2>
+        <div class="Container">
+            <h2> Dicas e Materiais </h2>
+
+        </div>
     </section>
     <!-- Conteúdo -->
     <section>
-        <h2> Cursos Gratuitos</h2>
-        <h3>Algoritmo</h2>
-        <h3>HTML5 E CSS3</h3>
-        <h3>JavaScript</h3>
+        <div class="Container">
+            <h2> Cursos Gratuitos</h2>
+            <h3>Algoritmo</h3>
+            <h3>HTML5 E CSS3</h3>
+            <h3>JavaScript</h3>
+        </div>
+
 
     </section>
     <footer>
-           <!-- Rodapé -->
+      <div class="Container"></div>
     </footer>
 </body>
+
 </html>
