--- a/index.html
+++ b/index.html
@@ -14,8 +14,22 @@
 
 <body>
     <!-- Cabeçalho -->
-    <header>
-        <div class="Container"></div>
+    <header id="inicio">
+        <div class="Container Flex">
+            <div id="logo">
+                <img src="img/imgIcon.png" alt="hal 9000">
+            </div>
+            <nav>
+                <input type="checkbox" id="check">
+                <label for="check">&#x2630;</label>
+                <ul>
+                    <li><a id="ini" href="#inicio">Inicio</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#conteudo">Conteúdo</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <!-- Destaque -->
     <main>
@@ -26,7 +40,7 @@
 
     </main>
     <!-- Sobre -->
-    <section>
+    <section id="sobre">
         <div class="Container">
             <h2>Começar a Estudar</h2>
         </div>
@@ -45,7 +59,7 @@
         </div>
     </section>
     <!-- Conteúdo -->
-    <section>
+    <section id="conteudo">
         <div class="Container">
             <h2> Cursos Gratuitos</h2>
             <h3>Algoritmo</h3>
@@ -55,9 +69,10 @@
 
 
     </section>
-    <footer>
-      <div class="Container"></div>
+    <footer id="contato">
+        <div class="Container"></div>
     </footer>
+    <a href="#inicio" id="topo"><img src="img/dedo.png" alt="topo do site"></a>
 </body>
 
 </html>
