--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div id="logo">
             <img src="img/maomec.png" alt="hal 9000">
             <a>VENHA APRENDER!</a>
-         </div>
+        </div>
         <div class="Container Flex">
-            
+
             <nav>
                 <input type="checkbox" id="check">
                 <label for="check">&#x2630;</label>
@@ -50,8 +50,9 @@
                 <img src="img/cyberPC.png" id="pc" alt="Meios de estudo">
             </div>
             <div id="textoSobre">
-                <h2>Começe a Estudar</h2>
-                <p><b>Aprenda agora de forma simples e direta,conteúdos escolhidos visando o aprendizado do zero a contrução de uma base sólida em programação</b>
+                <h2><b>Começe a Estudar!</b></h2>
+                <p><b>Aprenda agora de forma simples e direta,conteúdos escolhidos visando o aprendizado do zero a
+                        contrução de uma base sólida em programação</b>
                 </p>
                 <div class="TopicoSobre Flex2">
                     <a href="https://www.cursoemvideo.com/" target="_blank" class="Curso"><img src="img/iconLogic.png"
@@ -68,7 +69,7 @@
                     </a>
                     <a href="https://educapes.capes.gov.br/bitstream/capes/560827/2/Apostila%20-%20Curso%20de%20Lógica%20de%20Programação.pdf"
                         target="_blank">
-                        <p >Pdf Lógica de Programação</p>
+                        <p>Pdf Lógica de Programação</p>
                     </a>
 
                 </div>
@@ -86,9 +87,16 @@
         </div>
     </section>
     <!-- One Page -->
-    <section>
-        <div class="Container">
-            <h2>Por onde Começar?</h2>
+    <section id="onepage">
+        <div class="Container Flex3">
+            <div id="textoSite">
+                <h2><b>Por onde Começar?</b></h2>
+                <p><b>É preciso saber o caminho a ser trilhado, pensando nisso, nós elaboramos um pequeno "mapa" para sua jornada</b></p>
+            </div>
+            <div id="video">
+                    <video src="video/ola.mp4" controls width="560px" height="315"> </video>
+                    
+            </div>
         </div>
     </section>
     <!-- Wireframe -->
