--- a/index.html
+++ b/index.html
@@ -166,23 +166,22 @@
           <img src="img/whatsapp.png" alt="whatsapp" title="Abrir no Whatsapp">
           <p>(42)99941-9454</p>
         </a>
-        <img src="img/phone.png" alt="Telefone" title="Ligar">
+        <img src="img/phone.png" alt="Telefone" title="Ligar" id="fone">
         <p>(42)3232-329329</p>
-        <a href="mailto:rkainfelipe@yahoo.com?subject=Estudos">
-          <img src="img/emai.png" alt="E-mail" title="Enviar E-mail">
-          <p>rkainfelipe@yahoo.com</p>
-        </a>
-
       </div>
       <div id="endereco">
         <a href="https://maps.app.goo.gl/oecEiG9SBM7cCMpW6" target="_blank">
-          <img src="img/map.jpg" alt="Mapa" id="iconeMapa">
+          <img src="img/map.png" alt="Mapa" id="iconeMapa">
           <img src="img/iconLocal.png" alt="Local" id="iconeLocal">
+        </a>
           <p>Av. General Carlos Calvancanti</p>
           <p>Uvaranas</p>
           <p>Ponta Grossa</p>
           <p>Paraná-PR 84030-000</p>
-        </a>
+          <a href="mailto:rkainfelipe@yahoo.com?subject=Estudos">
+            <img src="img/emai.png" alt="E-mail" title="Enviar E-mail">
+            <p>rkainfelipe@yahoo.com</p>
+          </a>
       </div>
       <div id="googleMaps">
         <iframe
@@ -193,15 +192,17 @@
     </div>
   </address>
   <footer>
-    <div class="Container">
+    <div class="Container Flex7">
       <div id="copyrigth">
-        <p>&#169 Kainã Eleutério</p>
+        <p>&#169;2023 Kainã Eleutério</p>
       </div>
       <div id="social">
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+        <a href="">
+
+        </a>
+        <a href=""><img src="img/facebook.png" alt="Facebook"></a>
+        <a href=""><img src="img/instagram2.png" alt="Instagram"></a>
+        <a href=""><img src="img/twiter.jpg" alt="Twiter"></a>
       </div>
     </div>
   </footer>
