--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
           <img src="img/map.png" alt="Mapa" id="iconeMapa">
           <img src="img/iconLocal.png" alt="Local" id="iconeLocal">
         </a>
-          <p>Av. General Carlos Calvancanti</p>
-          <p>Uvaranas</p>
-          <p>Ponta Grossa</p>
-          <p>Paraná-PR 84030-000</p>
-          <a href="mailto:rkainfelipe@yahoo.com?subject=Estudos">
-            <img src="img/emai.png" alt="E-mail" title="Enviar E-mail">
-            <p>rkainfelipe@yahoo.com</p>
-          </a>
+        <p>Av. General Carlos Calvancanti</p>
+        <p>Uvaranas</p>
+        <p>Ponta Grossa</p>
+        <p>Paraná-PR 84030-000</p>
+        <a href="mailto:rkainfelipe@yahoo.com?subject=Estudos">
+          <img src="img/emai.png" alt="E-mail" title="Enviar E-mail">
+          <p>rkainfelipe@yahoo.com</p>
+        </a>
       </div>
       <div id="googleMaps">
         <iframe
@@ -200,9 +200,11 @@
         <a href="">
 
         </a>
-        <a href=""><img src="img/facebook.png" alt="Facebook"></a>
-        <a href=""><img src="img/instagram2.png" alt="Instagram"></a>
-        <a href=""><img src="img/twiter.jpg" alt="Twiter"></a>
+        <a href="https://www.facebook.com/oficialuepg/?locale=pt_BR" target="_blank"><img src="img/facebook.png"
+            alt="Facebook"></a>
+        <a href="https://www.instagram.com/oficialuepg/" target="_blank"><img src="img/instagram2.png"
+            alt="Instagram"></a>
+        <a href="https://twitter.com/oficialUEPG" target="_blank"><img src="img/twiter.jpg" alt="Twiter"></a>
       </div>
     </div>
   </footer>
