--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </p>
       </div>
       <div id="video">
-        <video src="video/ola.mp4" controls width="560px" height="315"></video>
+        <video src="video/ola.mp4" controls width="560px" height="315px"></video>
       </div>
     </div>
   </section>
@@ -131,7 +131,7 @@
             <h3>Programação</h3>
           </b>
           <p>
-            A programção é essencial para um engenheiro de software,uma das
+            A programação é essencial para um engenheiro de software,uma das
             suas principais habilidades.
           </p>
           <a href="https://www.youtube.com/watch?v=A1BaZr82XJI" target="_blank" class="Botao">Saiba +</a>
